# ferrum-photo

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
crate/: Cargo.toml
crate/src/: lib.rs
src/: env.d.ts  main.ts  shaders.wgsl  style.css
